WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184630
Function.prototype.caller shouldn't return generator bodies
https://bugs.webkit.org/show_bug.cgi?id=184630
Summary
Function.prototype.caller shouldn't return generator bodies
Filip Pizlo
Reported
2018-04-14 13:07:39 PDT
Patch forthcoming.
Attachments
the patch
(8.91 KB, patch)
2018-04-14 13:08 PDT
,
Filip Pizlo
ysuzuki
: review+
Details
Formatted Diff
Diff
patch for landing
(10.51 KB, patch)
2018-04-14 13:23 PDT
,
Filip Pizlo
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(12.33 KB, patch)
2018-04-15 09:12 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2018-04-14 13:08:54 PDT
Created
attachment 337961
[details]
the patch
Yusuke Suzuki
Comment 2
2018-04-14 13:12:03 PDT
Comment on
attachment 337961
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=337961&action=review
r=me, nice.
> JSTests/stress/function-caller-generator-body.js:24 > +})();
Can you add a test for, 1. Async functions, which uses generators internally 2. generator method functions like class A { *gen() { ... } } var a = new A(); var gen = a.gen();
Filip Pizlo
Comment 3
2018-04-14 13:12:43 PDT
(In reply to Yusuke Suzuki from
comment #2
)
> Comment on
attachment 337961
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=337961&action=review
> > r=me, nice. > > > JSTests/stress/function-caller-generator-body.js:24 > > +})(); > > Can you add a test for, > > 1. Async functions, which uses generators internally > 2. generator method functions like > > class A { > *gen() { > ... > } > } > > var a = new A(); > var gen = a.gen();
Good idea, will do.
Filip Pizlo
Comment 4
2018-04-14 13:23:25 PDT
Created
attachment 337962
[details]
patch for landing
EWS Watchlist
Comment 5
2018-04-14 14:38:39 PDT
Comment on
attachment 337962
[details]
patch for landing
Attachment 337962
[details]
did not pass jsc-ews (mac): Output:
http://webkit-queues.webkit.org/results/7317590
New failing tests: stress/function-caller-async-function-body.js.default
Filip Pizlo
Comment 6
2018-04-15 09:12:43 PDT
Created
attachment 337972
[details]
patch for landing
Filip Pizlo
Comment 7
2018-04-15 10:38:20 PDT
Landed in
https://trac.webkit.org/changeset/230662/webkit
Radar WebKit Bug Importer
Comment 8
2018-04-15 10:39:18 PDT
<
rdar://problem/39443234
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug